=======================
 CHANGES for crate-pdo
=======================

Unreleased
==========

 - Fix: having the same named parameter multiple times in a prepared SQL
   statement caused incorrect parameter substitution with bound values

2016/07/01 0.5.1
================

 - Fixed an issue that occur if parameters are passed in a different order
   than specified in the sql statement.

2016/06/20 0.5.0
================

 - Updated dependency: guzzlehttp/guzzle to ~6.0
   WARNING: This is a backward incompatible change!

2016/01/18 0.4.0
================

 - Support for multiple hosts in DSN connection string

 - Added support for using a default schema in PDO connection
   via ``/schema`` suffix in connection string

2016/01/12 0.3.1
================

 - Verify support for PHP 7
   Updated composer.json to meet dependencies

2015/08/12 0.3.0
================

 - Support binding named parameters with a leading `:` character

2015/05/08 0.2.1
================

 - Set auth attribute in constructor of PDO class if credentials
   are available

2015/05/07 0.2.0
================

 - Support guzzle http basic auth at Crate/PDO through doctrine
   dbal connection user credetials

2015/01/08 0.1.0
================

 - Fix performance issues by switching http client library to
   ``guzzle``.

2014/12/18 0.0.7
================

 - Fix: Literals containing a `:` character were misinterpreted as
   named parameters.

 - Nailed dependency versions of amphp/artax and amphp/amp
   to prevent composer from fetching newer, incompatible releases

2014/12/04 0.0.6
================

 - Fix setting of the ``timeout`` attribute.

2014/11/27 0.0.5
================

 - Support crate `array` and `object` data types

 - Code style issues

2014/10/30 0.0.4
================

 - Using a common DSN format now instead of an URI. See README.rst for
   details.
   WARNING: This is a backward incompatible change!

2014/10/27 0.0.3
================
